Set 100% height to fix scrolling on mobile devices.

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -8,8 +8,13 @@ html {
 }
 
 /*** Overall layout ****/
+html, body {
+    min-height: 100%;
+    height: 100%;
+}
+
 #root {
-    height: 100vh;
+    height: 100%;
 }
 
 .App {
@@ -23,7 +28,7 @@ html {
 
 .App > .ExperimentScreen {
     padding: 0;
-    height: calc(100% - 75px);
+    height: 100%;
     display: flex;
     flex-flow: column nowrap;
 }
